[package]
name = "serdevault"
version = "0.1.0"
edition = "2021"
author = ["jbgriesner"]
license = "MIT"
repository = "https://github.com/jbgriesner/serdevault"
description = "Encrypted serialization/deserialization using Serde"
keywords = ["serde", "encryption", "serialization", "security"]
categories = ["encoding", "cryptography"]

[dependencies]
aes-gcm = "0.10.3"
rand = { version = "0.9.0", features = ["std", "os_rng"] }
rpassword = "7.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "=1.0.1"
sha2 = "0.10.8"

[dev-dependencies]
tempfile = "3.6.0"