[package]
name = "serdevault"
version = "0.2.0"
edition = "2021"
authors = ["jbgriesner"]
license = "MIT"
repository = "https://github.com/jbgriesner/serdevault"
description = "Encrypted serialization/deserialization using Serde - Argon2id + AES-256-GCM"
keywords = ["serde", "encryption", "serialization", "security", "argon2"]
categories = ["encoding", "cryptography"]

[dependencies]
aes-gcm   = "0.10"
argon2    = "0.5"
rand      = { version = "0.8", features = ["getrandom"] }
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile  = "3"
thiserror = "1"
zeroize   = { version = "1", features = ["derive"] }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
